patch: patch article add seats

--- a/src/app/components/private/shared/trainers/add-trainer/add-trainer.component.html
+++ b/src/app/components/private/shared/trainers/add-trainer/add-trainer.component.html
@@ -6,7 +6,7 @@
 
     <div id="layoutSidenav_content">
       <main>
-        <div class="container-fluid px-4 ">
+        <div class="container-fluid px-4">
           <h1 class="mt-4">Formateur</h1>
           <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Ajouter un nouveau formateur</li>
@@ -14,43 +14,99 @@
 
           <form [formGroup]="myForm" (ngSubmit)="add()">
             <div class="form-group text-center">
-              <img [src]="imageUrl" class="image-fluid category-image" alt="" style="width: 150px;" />
-              <input type="file" class="form-control upload-input" (change)="save($event)" accept="image/x-png,image/gif,image/jpeg" id="customFile" />
+              <img
+                [src]="imageUrl"
+                class="image-fluid category-image"
+                alt=""
+                style="width: 150px"
+              />
+              <input
+                type="file"
+                class="form-control upload-input"
+                (change)="save($event)"
+                accept="image/x-png,image/gif,image/jpeg"
+                id="customFile"
+              />
             </div>
             <div class="form-group">
               <div class="row">
                 <div class="col-lg-6 my-2">
                   <label for="exampleFormControlFile1">prénom : </label>
                   <div *ngIf="firstname?.touched && firstname?.invalid">
-                    <small *ngIf="firstname?.errors?.['required']" class="text-danger">Le prénom est requis<br></small>
-                    <small *ngIf="firstname?.errors?.['pattern']" class="text-danger">prénom incorrect<br></small>
-                    <small *ngIf="firstname?.errors?.['minlength']" class="text-danger">le prénom doit contenir au moins deux caractères</small>
-                </div>
+                    <small
+                      *ngIf="firstname?.errors?.['required']"
+                      class="text-danger"
+                      >Le prénom est requis<br
+                    /></small>
+                    <small
+                      *ngIf="firstname?.errors?.['pattern']"
+                      class="text-danger"
+                      >prénom incorrect<br
+                    /></small>
+                    <small
+                      *ngIf="firstname?.errors?.['minlength']"
+                      class="text-danger"
+                      >le prénom doit contenir au moins deux caractères</small
+                    >
+                  </div>
                 </div>
                 <div class="col-lg-6 my-2">
                   <label for="exampleFormControlFile1">nom :</label>
                   <div *ngIf="lastname?.touched && lastname?.invalid">
-                    <small *ngIf="lastname?.errors?.['required']" class="text-danger">Le nom est requis<br></small>
-                    <small *ngIf="lastname?.errors?.['pattern']" class="text-danger">nom incorrect<br></small>
-                    <small *ngIf="lastname?.errors?.['minlength']" class="text-danger">le nom doit contenir au moins deux caractères</small>
-                </div>
+                    <small
+                      *ngIf="lastname?.errors?.['required']"
+                      class="text-danger"
+                      >Le nom est requis<br
+                    /></small>
+                    <small
+                      *ngIf="lastname?.errors?.['pattern']"
+                      class="text-danger"
+                      >nom incorrect<br
+                    /></small>
+                    <small
+                      *ngIf="lastname?.errors?.['minlength']"
+                      class="text-danger"
+                      >le nom doit contenir au moins deux caractères</small
+                    >
+                  </div>
                 </div>
                 <div class="col-lg-6">
-                  <input type="text" class="form-control" formControlName="firstname" id="firstname" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="firstname"
+                    id="firstname"
+                  />
                 </div>
                 <div class="col-lg-6">
-                  <input type="text" class="form-control" formControlName="lastname" id="lastname" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="lastname"
+                    id="lastname"
+                  />
                 </div>
               </div>
             </div>
             <div class="form-group mt-2">
               <label for="exampleFormControlFile1" class="mb-2">email :</label>
               <div *ngIf="email?.touched && email?.invalid">
-                <small *ngIf="email?.errors?.['required']" class="text-danger">email est requis<br></small>
-                <small *ngIf="email?.errors?.['pattern']" class="text-danger">email incorrect<br></small>
-                <small *ngIf="email?.errors?.['minlength']" class="text-danger">email doit contenir au moins deux caractères</small>
-            </div>
-              <input type="text" class="form-control" formControlName="email" id="email" />
+                <small *ngIf="email?.errors?.['required']" class="text-danger"
+                  >email est requis<br
+                /></small>
+                <small *ngIf="email?.errors?.['pattern']" class="text-danger"
+                  >email incorrect<br
+                /></small>
+                <small *ngIf="email?.errors?.['minlength']" class="text-danger"
+                  >email doit contenir au moins deux caractères</small
+                >
+              </div>
+              <input
+                type="text"
+                class="form-control"
+                formControlName="email"
+                id="email"
+              />
             </div>
 
             <div class="form-group">
@@ -58,43 +114,102 @@
                 <div class="col-lg-6">
                   <label for="exampleFormControlFile1">spécialité</label>
                   <div *ngIf="speciality?.touched && speciality?.invalid">
-                    <small *ngIf="speciality?.errors?.['required']" class="text-danger">spécialité est requis<br></small>
-                    <small *ngIf="speciality?.errors?.['pattern']" class="text-danger">spécialité incorrect<br></small>
-                    <small *ngIf="speciality?.errors?.['minlength']" class="text-danger">spécialité doit contenir au moins deux caractères</small>
-                </div>
+                    <small
+                      *ngIf="speciality?.errors?.['required']"
+                      class="text-danger"
+                      >spécialité est requis<br
+                    /></small>
+                    <small
+                      *ngIf="speciality?.errors?.['pattern']"
+                      class="text-danger"
+                      >spécialité incorrect<br
+                    /></small>
+                    <small
+                      *ngIf="speciality?.errors?.['minlength']"
+                      class="text-danger"
+                      >spécialité doit contenir au moins deux caractères</small
+                    >
+                  </div>
                 </div>
 
                 <div class="col-lg-6">
-                  <label for="exampleFormControlFile1">Les années d'expérience</label>
-                  <div *ngIf="yearsOfExperience?.touched && yearsOfExperience?.invalid">
-                    <small *ngIf="yearsOfExperience?.errors?.['required']" class="text-danger">Les années d'expérience est requis<br></small>
-                    <small *ngIf="yearsOfExperience?.errors?.['pattern']" class="text-danger">Les années d'expérience incorrect<br></small>
-                    <small *ngIf="yearsOfExperience?.errors?.['minlength']" class="text-danger">Les années d'expérience doit contenir au moins deux caractères</small>
-                </div>
+                  <label for="exampleFormControlFile1"
+                    >Les années d'expérience</label
+                  >
+                  <div
+                    *ngIf="
+                      yearsOfExperience?.touched && yearsOfExperience?.invalid
+                    "
+                  >
+                    <small
+                      *ngIf="yearsOfExperience?.errors?.['required']"
+                      class="text-danger"
+                      >Les années d'expérience est requis<br
+                    /></small>
+                    <small
+                      *ngIf="yearsOfExperience?.errors?.['pattern']"
+                      class="text-danger"
+                      >Les années d'expérience incorrect<br
+                    /></small>
+                    <small
+                      *ngIf="yearsOfExperience?.errors?.['minlength']"
+                      class="text-danger"
+                      >Les années d'expérience doit contenir au moins deux
+                      caractères</small
+                    >
+                  </div>
                 </div>
                 <div class="col-lg-6">
-                  <input type="text" class="form-control" formControlName="speciality" id="speciality" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="speciality"
+                    id="speciality"
+                  />
                 </div>
                 <div class="col-lg-6">
-                  <input type="text" class="form-control" formControlName="yearsOfExperience" id="yearsOfExperience" />
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="yearsOfExperience"
+                    id="yearsOfExperience"
+                  />
                 </div>
               </div>
-
             </div>
             <div class="form-group mt-2">
-              <label for="exampleFormControlFile1" class="mb-2">facebook :</label>
-              <input type="text" class="form-control" formControlName="facebook" id="facebook" />
+              <label for="exampleFormControlFile1" class="mb-2"
+                >facebook :</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                formControlName="facebook"
+                id="facebook"
+              />
             </div>
             <div class="form-group mt-2">
-              <label for="exampleFormControlFile1" class="mb-2">instagram :</label>
-              <input type="text" class="form-control" formControlName="instagram" id="instagram" />
+              <label for="exampleFormControlFile1" class="mb-2"
+                >instagram :</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                formControlName="instagram"
+                id="instagram"
+              />
             </div>
             <div class="form-group mt-2">
-              <label for="exampleFormControlFile1" class="mb-2">twitter :</label>
-              <input type="text" class="form-control" formControlName="twitter" id="twitter" />
+              <label for="exampleFormControlFile1" class="mb-2"
+                >twitter :</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                formControlName="twitter"
+                id="twitter"
+              />
             </div>
-
-
 
             <button class="btn btn-primary mt-2" type="submit">Ajouter</button>
           </form>
