feature: add single training component

--- a/src/app/components/private/shared/trainings/training-list/training-list.component.html
+++ b/src/app/components/private/shared/trainings/training-list/training-list.component.html
@@ -58,7 +58,7 @@
                       <button
                       class="btn btn-primary mx-2"
                       style="color: white"
-                      [routerLink]="['/category', training._id]"
+                      [routerLink]="['/training-list', training._id]"
                     >
                       <i class="fa fa-eye" aria-hidden="true"></i>
                     </button>
