--- a/src/app/components/private/shared/messages/message-list2/message-list2.component.html
+++ b/src/app/components/private/shared/messages/message-list2/message-list2.component.html
@@ -5,28 +5,54 @@
     <app-side-bar></app-side-bar>
 
     <!-- CONTENT-->
-
     <div id="layoutSidenav_content">
-      <main>
-        <div class="container-fluid px-4">
-          <h3 style="color: black">Message venant de : <span style="color:black ;"> {{message.sender}}</span></h3>
-          <h6> email :<span>{{message.email}}</span></h6>
+    <main>
+      <div class="container-fluid px-4">
+        <h1 class="mt-4">
+          Message venant de :
+          <span> {{ message.sender }}</span>
+        </h1>
 
-          <h6> Title : <span>{{message.title}}</span></h6>
-          <h6> Content :</h6> <span>{{message.content}}</span>
-          <div>
-
-
-            <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
-              aria-hidden="true">
-              <div class="modal-dialog modal-sm">
-                <div class="modal-content">...</div>
-              </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-lg-6 my-2">
+              <label for="exampleFormControlFile1">email : </label>
             </div>
-           
+            <div class="col-lg-6 my-2">
+              <label for="exampleFormControlFile1">sujet :</label>
+            </div>
+            <div class="col-lg-6">
+              <input
+                type="text"
+                class="form-control"
+                value="{{ message.email }}"
+                id="firstname"
+                readonly
+              />
+            </div>
+            <div class="col-lg-6">
+              <input
+                type="text"
+                class="form-control"
+                value="{{ message.title }}"
+                id="lastname"
+                readonly
+              />
+            </div>
           </div>
         </div>
-      </main>
+        <div class="form-group mt-2">
+          <label for="exampleFormControlFile1" class="mb-2">content :</label>
+          <textarea
+            type="text"
+            class="form-control"
+            value="{{ message.content }}"
+            id="email"
+            readonly
+          ></textarea>
+        </div>
+      </div>
+    </main>
     </div>
   </div>
   <app-footer-dashboard></app-footer-dashboard>
