feature: create 404 page

--- a/src/app/components/public/page404/page404.component.html
+++ b/src/app/components/public/page404/page404.component.html
@@ -1,1 +1,19 @@
-<p>page404 works!</p>
+<div class="container d-flex flex-column">
+  <div
+    class="row align-items-center justify-content-center no-gutters min-vh-100"
+  >
+    <div class="offset-lg-1 col-lg-4 col-md-12 col-12 text-left text-lg-left">
+      <h1 class="display-1 mb-3">Oops!</h1>
+      <h3>Désolé, nous n'avons pas trouvé la page que vous cherchiez.</h3>
+      <p class="mb-4 small">Code d'erreur : 404 introuvable.</p>
+      <a routerLink="/" class="btn btn-primary mr-2">Retour a la sécurité</a>
+    </div>
+    <div class="offset-lg-1 col-lg-6 col-md-12 col-12">
+      <img
+        src="assets/img/error-404.svg"
+        alt=""
+        class="w-100"
+      />
+    </div>
+  </div>
+</div>
