feature: create admin login interface

--- a/src/app/components/private/shared/top-bar/top-bar.component.html
+++ b/src/app/components/private/shared/top-bar/top-bar.component.html
@@ -16,7 +16,7 @@
                         <li>
                             <hr class="dropdown-divider" />
                         </li>
-                        <li><a class="dropdown-item">Se déconnecter</a></li>
+                        <li><a class="dropdown-item" routerLink="/admin-login">Se déconnecter</a></li>
                     </ul>
                 </li>
             </ul>
