--- a/src/app/components/public/home/home.component.css
+++ b/src/app/components/public/home/home.component.css
@@ -1,18 +1,23 @@
-.description{
-    height: 200px;
+.description {
+  height: 200px;
 }
 
-.button{
-    width: 20%;
-    display: block;
-    margin: auto;
+.button {
+  width: 20%;
+  display: block;
+  margin: auto;
 }
 
-.image-training{
-    width: 100%;
-    height: 100%;
+.image-training {
+  width: 100%;
+  height: 100%;
 }
 
-.objectif{
-    font-size: 14px;
+.objectif {
+  font-size: 14px;
+}
+
+.image-land {
+  object-fit: cover;
+  width: 100%;
 }
