--- a/src/app/components/public/home/home.component.html
+++ b/src/app/components/public/home/home.component.html
@@ -6,7 +6,7 @@
 <div class="container-fluid p-0 mb-5">
   <div class="header-carousel position-relative">
     <div class="position-relative">
-      <img class="img-fluid" src="assets/img/carousel-1.jpg" alt="" />
+      <img class="img-fluid image-land" src="assets/img/carousel-1.jpg" alt="" />
       <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
         style="background: rgba(24, 29, 56, 0.7)">
         <div class="container">
